--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     },
     "dmg": {
       "background": "build/install.png",
-      "icon": "build/logo.icns",
+      "icon": "build/icon.icns",
       "iconSize": 100,
       "contents": [
         {
           "x": 380,
-          "y": 280,
+          "y": 340,
           "type": "link",
           "path": "/Applications"
         },
         {
           "x": 110,
-          "y": 280,
+          "y": 340,
           "type": "file"
         }
       ],
